comparison-1/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-pod-requests-limits
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../require-pod-requests-limits.yaml
        # change the file to '../cpol.yaml' to test clusterpolicy (currently its on vpol)

  - name: step-02
    try:
    - apply:
        file: good-pods.yaml
    - apply:
        file: good-podcontrollers.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-nolimit.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-nores.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-nothing.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-podcontrollers.yaml

---
